@startuml models_diagram_enterprise
' Diagrama de Modelos - Padrão Enterprise com Nomes Descritivos e Trigramas
' skinparam linetype ortho

' Tabelas de Domínio / Lookup
entity "dominio_tipos_parceiro" as tpc {
  * tpc_id : int (PK)
  --
  tpc_descricao : varchar(50) {unique}
}

entity "dominio_status_job" as stj {
  * stj_id : int (PK)
  --
  stj_descricao : varchar(50) {unique}
}

entity "dominio_status_lancamento" as stl {
  * stl_id : int (PK)
  --
  stl_descricao : varchar(50) {unique}
}

entity "dominio_tipos_lancamento" as tlc {
  * tlc_id : int (PK)
  --
  tlc_descricao : varchar(50) {unique}
}

' Tabelas de Cadastro / Mestre
entity "cadastro_empresas" as emp {
  * emp_id : int (PK)
  --
  emp_nome : varchar(255)
  emp_cnpj : varchar(18) {unique}
}

entity "cadastro_parceiros" as pcr {
  * pcr_id : int (PK)
  --
  # tpc_id : int (FK)
  pcr_nome : varchar(255)
  pcr_cnpj : varchar(18) {unique}
}

' Tabelas de Movimento / Transacionais
entity "movimento_jobs_processamento" as jbp {
  * jbp_id : int (PK)
  --
  # emp_id : int (FK)
  # stj_id : int (FK)
  jbp_arquivo_original : varchar(255)
  jbp_dt_criacao : timestamptz
  jbp_dt_conclusao : timestamptz
  jbp_mensagem_erro : text
}

entity "movimento_notas_fiscais" as ntf {
  * ntf_id : int (PK)
  --
  # jbp_id : int (FK)
  # pcr_id : int (FK)
  ntf_numero : varchar(100)
  ntf_data_emissao : date
  ntf_valor_total : numeric(10,2)
}

entity "movimento_lancamentos_financeiros" as lcf {
  * lcf_id : int (PK)
  --
  # ntf_id : int (FK)
  # tlc_id : int (FK)
  # stl_id : int (FK)
  lcf_descricao : varchar(255)
  lcf_valor : numeric(10,2)
  lcf_data_vencimento : date
  lcf_data_pagamento : date
}

' Relacionamentos
emp ||--|{ jbp
pcr ||--o{ ntf

tpc ||--|{ pcr
stj ||--|{ jbp

jbp ||--|{ ntf
ntf ||--o{ lcf

tlc ||--|{ lcf
stl ||--|{ lcf

@enduml